# seahorse

./: .gitignore  meson.build
common/: app-settings.vala  catalog.vala  change-pin-prompt.vala  delete-operation.vala  export-operation.vala  exporter.vala  interaction.vala  lockable.vala  meson.build  object.vala  passphrase-prompt.vala  prefs-keyservers.vala  prefs.vala  seahorse-prefs-keyservers.ui  util.vala  viewable.vala
data/: org.gnome.seahorse.Application.appdata.xml.in  seahorse.gresource.xml
gkr/: gkr-backend.vala  gkr-generate-password.vala  gkr-item-add.vala  gkr-item-properties.vala  gkr-item.vala  gkr-keyring-add.vala  gkr-keyring-delete-operation.vala  gkr-keyring-properties.vala  gkr-keyring.vala  meson.build  seahorse-gkr-add-item.ui  seahorse-gkr-add-keyring.ui  seahorse-gkr-generate-password.ui  seahorse-gkr-item-properties.ui  seahorse-gkr-keyring.ui
libseahorse/: seahorse-util.c  seahorse-util.h
pgp/: meson.build  seahorse-gpgme-add-subkey.ui  seahorse-gpgme-expires-dialog.c  seahorse-gpgme-expires-dialog.h  seahorse-gpgme-expires-dialog.ui  seahorse-gpgme-generate-dialog.c  seahorse-gpgme-generate-dialog.h  seahorse-gpgme-generate-dialog.ui  seahorse-gpgme-key-op.c  seahorse-gpgme-key.c  seahorse-gpgme-keyring.c  seahorse-gpgme-photos.c  seahorse-gpgme-sign-dialog.c  seahorse-gpgme-sign-dialog.ui  seahorse-keyserver-sync.c  seahorse-pgp-actions.c  seahorse-pgp-backend.c  seahorse-pgp-backend.h  seahorse-pgp-key-properties.c  seahorse-pgp-key-properties.h  seahorse-pgp-key-properties.ui  seahorse-pgp-key.c  seahorse-pgp-private-key-properties.ui  seahorse-pgp-public-key-properties.ui  seahorse-pgp-subkey-list-box.c
pkcs11/: meson.build  pkcs11-certificate-dialog.ui  pkcs11-certificate-dialog.vala  pkcs11-certificate-widget.ui  pkcs11-certificate-widget.vala  pkcs11-certificate.vala  pkcs11-delete-operation.vala  pkcs11-generate.ui  pkcs11-generate.vala  pkcs11-private-key-widget.ui  pkcs11-private-key-widget.vala  pkcs11-private-key.vala  pkcs11-request.vala  pkcs11-token-filter.vala  pkcs11-token.vala  pkcs11.vapi  seahorse-pkcs11-backend.c
po/: POTFILES.in
src/: application.vala  import-dialog.vala  key-manager-item-row.vala  key-manager.vala  meson.build  seahorse-key-manager.ui  sidebar.vala
ssh/: actions.vala  generate.vala  key-properties.vala  key.vala  meson.build  seahorse-ssh-askpass.c  seahorse-ssh-generate.ui  seahorse-ssh-key-properties.ui  seahorse-ssh-upload.ui  source.vala  upload.vala
